Feat: Agregación de cards.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,26 @@
                     <div class="card" style="width: 18rem;">
                         <img src="./images/NinjaH2R.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Ninja H2R</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Reprehenderit, cupiditate quis eum ullam autem harum, dolores, voluptatum laudantium
-                                similique nemo ex? Molestiae explicabo, facere necessitatibus nihil voluptas expedita
-                                magnam voluptate.</p>
+                          <h5 class="card-title">Ninja H2R</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, cupiditate quis eum ullam autem harum, dolores, voluptatum laudantium similique nemo ex? Molestiae explicabo, facere necessitatibus nihil voluptas expedita magnam voluptate.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/honda_cbr650r.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Honda CBR650R</h5>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, natus ullam nisi quam necessitatibus dolorum assumenda sint debitis modi cupiditate ex veniam illo nemo atque provident repellat, veritatis commodi voluptatum.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/ktm-390-duke.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">KTM 390 Duke </h5>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, natus ullam nisi quam necessitatibus dolorum assumenda sint debitis modi cupiditate ex veniam illo nemo atque provident repellat, veritatis commodi voluptatum.</p>
                         </div>
                     </div>
                 </div>
@@ -51,7 +66,7 @@
         <footer class="d-flex justify-content-center">
             <div class="alert alert-secondary" role="alert">
                 Talamantes Castañeda ÁNgela María ~ 191243 ~ IDGS ~ 9°A.
-            </div>
+              </div>
         </footer>
 
     </header>
