Feat: Cambio de estilo en un card.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <div class="card mb-3">
+                        <img src="./images/Panigale-V4-MY22.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Panigale V4 MY22</h5>
+                          <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, iusto perferendis, quis impedit autem doloremque molestiae id delectus obcaecati ipsam nihil, cupiditate expedita? Amet totam optio odio. Tenetur, beatae quo.</p>
+                          <p class="card-text"><small class="text-muted">Comming Soon</small></p>
+                        </div>
+                </div>
             </div>
         </div>
 
